<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_theme_switch"
        android:title="@string/menu_theme"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item android:title="@string/menu_effects" >
        <menu >
            <item
                android:id="@+id/menu_party"
                android:title="@string/menu_party" />
            <item
                android:id="@+id/menu_rotate"
                android:title="@string/menu_rotate" />
            <item
                android:id="@+id/menu_sound"
                android:title="@string/menu_sound" />
            <item
                android:id="@+id/menu_vibration"
                android:title="@string/menu_vibration" />
        </menu>
    </item>
    <item android:title="@string/menu_open" >
        <menu >
            <item
                android:id="@+id/menu_photo"
                android:title="@string/menu_photo" />
            <item
                android:id="@+id/menu_timer"
                android:title="@string/menu_timer" />
            <item
                android:id="@+id/menu_notification"
                android:title="@string/menu_notification" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_site"
        android:title="@string/menu_site" />
    <item
        android:id="@+id/menu_window"
        android:title="@string/menu_window" />
</menu>